istio/micromaze.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: postgres
  name: postgres
spec:
  type: ClusterIP
  ports:
  - name: postgres
    port: 5432
  selector:
    service: postgres
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: postgres
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:9.6
        resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: usersvc
  labels:
    service: usersvc
spec:
  type: ClusterIP
  ports:
  - name: http-usersvc
    port: 5000
  selector:
    service: usersvc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: usersvc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: usersvc
    spec:
      containers:
      - name: usersvc
        image: dwflynn/micromaze-user:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: gruesvc
  labels:
    service: gruesvc
spec:
  type: ClusterIP
  ports:
  - name: http-gruesvc
    port: 5000
  selector:
    service: gruesvc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gruesvc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: gruesvc
    spec:
      containers:
      - name: gruesvc
        image: dwflynn/micromaze-grue:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mazesvc
  labels:
    service: mazesvc
spec:
  type: ClusterIP
  ports:
  - name: http-mazesvc
    port: 5000
  selector:
    service: mazesvc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mazesvc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: mazesvc
    spec:
      containers:
      - name: mazesvc
        image: dwflynn/micromaze-maze:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      restartPolicy: Always
