istio/ambassador.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ambassador
  name: ambassador
spec:
  type: ClusterIP
  ports:
  - name: http-ambassador
    port: 80
    targetPort: 80
  selector:
    service: ambassador
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: aadmin
  name: aadmin
spec:
  type: NodePort
  ports:
  - name: http-aadmin
    port: 8888
    targetPort: 8888
  selector:
    service: ambassador
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: astore
  name: astore
spec:
  type: ClusterIP
  ports:
  - name: astore
    port: 5432
  selector:
    service: astore
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: astore
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: astore
    spec:
      containers:
      - name: astore
        image: postgres:9.6
        resources:
          limits:
            cpu: 1
            memory: 400Mi
          requests:
            cpu: 200m
            memory: 100Mi
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ambassador
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: ambassador
    spec:
      containers:
      - name: ambassador
        image: datawire/ambassador:0.8.11
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: 400Mi
          requests:
            cpu: 200m
            memory: 100Mi
        volumeMounts:
        - mountPath: /etc/certs
          name: cert-data
        - mountPath: /etc/cacert
          name: cacert-data
      - name: statsd
        image: datawire/statsd:0.8.11
      volumes:
      - name: cert-data
        secret:
          secretName: ambassador-certs
      - name: cacert-data
        secret:
          secretName: ambassador-cacert
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: ambassador
          servicePort: 80
